Add: Started writing blogpost 2

--- a/blog-posts/blog-post2.html
+++ b/blog-posts/blog-post2.html
@@ -35,10 +35,10 @@
             <p class="date">05-10-2025</p>
 
             <p>
-                A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida. This blog is a place where you can follow my journey from a overly exited Digital Design 3rd year student to a professional webdesigner/developer. I'll write about the projects I'm working on, new things I learned, I'll even write about aswell as my intern ship that I'm doing next semester so look forward to that 👀 
             </p>
             <p>
-                A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Besides that, I'll also share personal stories and give some advice here and there. 
             </p>
             <p>
                 A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
