Add: added a blog-post3.html and changed the order of the previous posts in both the filenames and the index.html

--- a/blog.html
+++ b/blog.html
@@ -49,12 +49,21 @@
             <h2>My Blog</h2>
 
             <article class="blogPost">
+                <h3>Struggles of a webdesigner</h3>
+                <p class="date">22-10-2025</p>
+                <p>
+                    A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <a href="blog-posts/blog-post3.html">Read more →</a>
+            </article>
+
+            <article class="blogPost">
                 <h3>Why I started programming</h3>
                 <p class="date">07-10-2025</p>
                 <p>
                     A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <a href="blog-posts/blog-post1.html">Read more →</a>
+                <a href="blog-posts/blog-post2.html">Read more →</a>
             </article>
 
             <article class="blogPost">
@@ -63,7 +72,7 @@
                 <p>
                     A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <a href="blog-posts/blog-post2.html">Read more →</a>
+                <a href="blog-posts/blog-post1.html">Read more →</a>
             </article>
         </section>
     </main>
