--- a/blog-posts/blog-post3.html
+++ b/blog-posts/blog-post3.html
@@ -9,7 +9,7 @@
 </head>
 <body class="singleBlogPost">
      <div class="waveImgContainer">
-        <img src="/icons/avatarWave.png" alt="Sitting avatar">
+        <img src="/icons/avatarFrustrated.png" alt="Sitting avatar">
     </div>
     <nav class="navBar">
         <div class="navLogo"><a href="../index.html">Audromida</a></div>
@@ -31,11 +31,11 @@
 
     <main>
         <article class="blogPost fullPost">
-            <h2>Hi there! Welcome to my blog</h2>
-            <p class="date">05-10-2025</p>
+            <h2>Struggles of a webdesigner</h2>
+            <p class="date">22-10-2025</p>
 
             <p>
-                Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida. This blog is a place where you can follow my journey from a overly exited Digital Design 3rd year student to a professional webdesigner/developer. I'll write about the projects I'm working on, new things I learned, I'll even write about aswell as my intern ship that I'm doing next semester so look forward to that 👀 
+                So we had the introduction 
             </p>
             <p>
                 Besides that, I'll also share personal stories and give some advice here and there. 
