Fix: fixed the data-i18n of the modal

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <p><strong>Design:</strong> Figma, Blender, Illustrator</p>
                     <p><strong>Development:</strong> HTML, CSS, JavaScript & Three.js</p>
                     <p><strong data-i18n="projects.school.zuiderbad.descLabel">Description:</strong><span data-i18n="projects.school.zuiderbad.description">Last schoolyear we've been given the opportunity to work with a real client! Our class got devided in 3 groups and each group was given a different client. My group worked with <a href="https://www.zuiderbad.be/" class="infoLinks">Zuiderbad</a>, a horeca and event bureau in Mechelen. <br> They asked us to create an online map so people could navigate themselves better around the domain. My role within the project was to design the UI of the map and how it would look integrated on the existing website.</p></span>
-                    <p><strong data-i18n="projects.school.zuiderbad.teamLabel">Meet the team:</strong><a href="#" class="infoLinks" data-i18n="projects.school.zuiderbad.team1"> Ben Devos</a> en <a href="#" class="infoLinks" data-i18n="projects.school.zuiderbad.team2">Sam Pittois</a></p>
+                    <p><strong data-i18n="projects.school.zuiderbad.teamLabel">Meet the team: </strong><a href="#" class="infoLinks"> Ben Devos</a> en <a href="#" class="infoLinks"> Sam Pittois</a></p>
 
                     <div>
                         <h3 data-i18n="projects.school.zuiderbad.color-palette-title">Color Palette:</h3>                        
@@ -464,9 +464,9 @@
                 <div class="modalContent">
                     <span class="close" data-modal="modal-ben">&times;</span>
                     <h3 data-i18n="projects.school.zuiderbad.modal.ben.name">Ben Devos</h3>
-                    <p><strong data-i18n="projects.school.zuiderbad.modal.ben.jobLabel">Job description</strong><span data-i18n="projects.school.zuiderbad.modal.ben.job">Backend Developer</p></span>
+                    <p><strong data-i18n="projects.school.zuiderbad.modal.ben.jobLabel">Job description: </strong><span data-i18n="projects.school.zuiderbad.modal.ben.job">Backend Developer: </span></p>
                     <p><strong data-i18n="projects.school.zuiderbad.modal.ben.feedbackLabel">Feedback:</strong><span data-i18n="projects.school.zuiderbad.modal.ben.feedback"></span>I loved this project!</p>
-                    <p><strong data-i18n="projects.school.zuiderbad.modal.ben.portfolioLabel">Check out their work:</strong><a href="#" target="_blank" class="infoLinks"> Portfolio</a></p>
+                    <p><strong data-i18n="projects.school.zuiderbad.modal.ben.portfolioLabel">Check out their work: </strong><a href="#" target="_blank" class="infoLinks"> Portfolio</a></p>
                 </div>
             </div>
 
@@ -476,7 +476,7 @@
                 <div class="modalContent">
                     <span class="close" data-modal="modal-sam">&times;</span>
                     <h3 data-i18n="projects.school.zuiderbad.modal.ben.name">Sam Pittois</h3>
-                    <p><strong data-i18n="projects.school.zuiderbad.modal.sam.jobLabel">Job description</strong><span data-i18n="projects.school.zuiderbad.modal.sam.job">3D Designer</p></span>
+                    <p><strong data-i18n="projects.school.zuiderbad.modal.sam.jobLabel">Job description: </strong><span data-i18n="projects.school.zuiderbad.modal.sam.job">3D Designer: </span></p>
                     <p><strong data-i18n="projects.school.zuiderbad.modal.sam.feedbackLabel">Feedback:</strong><span data-i18n="projects.school.zuiderbad.modal.sam.feedback"></span>I loved this project!</p>
                     <p><strong data-i18n="projects.school.zuiderbad.modal.sam.portfolioLabel">Check out her work:</strong><a href="#" target="_blank" class="infoLinks"> Portfolio</a></p>
                 </div>
@@ -629,7 +629,7 @@
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
-                    <h3><strong class="info-title" data-i18n="contact.linkedinLabel">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386" data-i18n="contact.linkedinText">Audrey Designs</a></h3>
+                    <h3><strong class="info-title" data-i18n="contact.linkedinLabel">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386" target="_blank" data-i18n="contact.linkedinText">Audrey Designs</a></h3>
                 </div>
                  <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
