Feat: changed faketext with the actual preview text of the blogpost

--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
                 <h3>Why I started programming</h3>
                 <p class="date">07-10-2025</p>
                 <p>
-                    A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    So you want to know why I started programming huh? Well, it all started when I was born. ... Nah, just kidding! The real story takes place a few years later than that. I've always been a fairly creative person, partially because of my health issues that kept me indoors throughout my entire childhood. I had to look for ways to entertain myself that weren't just watching TV all day. Fortunately, I was a very imaginative kid, so I started drawing ...
                 </p>
                 <a href="blog-posts/blog-post2.html">Read more →</a>
             </article>
@@ -70,7 +70,7 @@
                 <h3>Hi there! Welcome to my blog</h3>
                 <p class="date">05-10-2025</p>
                 <p>
-                    A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida. This blog is a place where you can follow my journey from a overly exited Digital Design 3rd year student to a professional webdesigner/developer. I'll write about the projects I'm working on, new things I learned, I'll even write about aswell as my intern ship that I'm doing next semester so look forward to that 👀 ...
                 </p>
                 <a href="blog-posts/blog-post1.html">Read more →</a>
             </article>
