Fix: changed the colorscodes of all the projects in the "color palette" sections so now the correct colors are displayed

--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
                     <div>
                         <h3 data-i18n="projects.school.foodkiosk.color-palette-title">Color Palette:</h3>                        
                         <div class="color-palette">
-                            <button style="background: #381dfc; color:white;"> #381dfc</button>
-                            <button style="background: #0bf8e4; color:black;"> #0bf8e4</button>
-                            <button style="background: #00CAB9; color:black;"> #00CAB9</button>
-                            <button style="background: #ffd700; color:black;"> #ffd700</button>
-                            <button style="background: #F8065D; color:white;"> #F8065D</button>
-                            <button style="background: #0c082f; color:white;"> #0c082f</button>
+                            <button style="background: #ffffff; color:black;"> #ffffff</button>
+                            <button style="background: #F1DD7F; color:black;"> #F1DD7F</button>
+                            <button style="background: #CA2B01; color:black;"> #CA2B01</button>
+                            <button style="background: #702E25; color:white;"> #702E25</button>
+                            <button style="background: #9F5E31; color:white;"> #9F5E31</button>
+                            <button style="background: #459F21; color:white;"> #459F21</button>
                         </div>
                     </div>
 
@@ -375,10 +375,7 @@
                         <h3 data-i18n="projects.school.foodkiosk.typography-title">Typography:</h3>
                         <p class="font-families">
                             <span style="font-family: 'PaytoneOne-Regular', sans-serif;">PaytoneOne-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'Hind-Medium', sans-serif;">Hind-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'MontserratAlternates-Medium', sans-serif;">MontserratAlternates-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'BaiJamjuree-MediumItalic', sans-serif;">BaiJamjuree-MediumItalic</span>
+                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> 
                         </p>
                     </div>
 
@@ -406,12 +403,12 @@
                     <div>
                         <h3 data-i18n="projects.school.xdStickers.color-palette-title">Color Palette:</h3>                        
                         <div class="color-palette">
-                            <button style="background: #381dfc; color:white;"> #381dfc</button>
-                            <button style="background: #0bf8e4; color:black;"> #0bf8e4</button>
-                            <button style="background: #00CAB9; color:black;"> #00CAB9</button>
-                            <button style="background: #ffd700; color:black;"> #ffd700</button>
-                            <button style="background: #F8065D; color:white;"> #F8065D</button>
-                            <button style="background: #0c082f; color:white;"> #0c082f</button>
+                            <button style="background: #EF875B; color:black;"> #EF875B</button>
+                            <button style="background: #61B87B; color:black;"> #61B87B</button>
+                            <button style="background: #090F1C; color:white;"> #090F1C</button>
+                            <button style="background: #ffffff; color:black;"> #ffffff</button>
+                            <button style="background: #43AFE2; color:black;"> #43AFE2</button>
+                            <button style="background: #D6E080; color:black;"> #D6E080</button>
                         </div>
                     </div>
 
@@ -419,10 +416,7 @@
                         <h3 data-i18n="projects.school.xdStickers.typography-title">Typography:</h3>
                         <p class="font-families">
                             <span style="font-family: 'PaytoneOne-Regular', sans-serif;">PaytoneOne-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'Hind-Medium', sans-serif;">Hind-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'MontserratAlternates-Medium', sans-serif;">MontserratAlternates-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'BaiJamjuree-MediumItalic', sans-serif;">BaiJamjuree-MediumItalic</span>
+                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> 
                         </p>
                     </div>
 
@@ -446,12 +440,12 @@
                     <div>
                         <h3 data-i18n="projects.school.zuiderbad.color-palette-title">Color Palette:</h3>                        
                         <div class="color-palette">
-                            <button style="background: #381dfc; color:white;"> #381dfc</button>
-                            <button style="background: #0bf8e4; color:black;"> #0bf8e4</button>
-                            <button style="background: #00CAB9; color:black;"> #00CAB9</button>
-                            <button style="background: #ffd700; color:black;"> #ffd700</button>
-                            <button style="background: #F8065D; color:white;"> #F8065D</button>
-                            <button style="background: #0c082f; color:white;"> #0c082f</button>
+                            <button style="background: #FFB949; color:black;"> #FFB949</button>
+                            <button style="background: #FFEEE4; color:black;"> #FFEEE4</button>
+                            <button style="background: #548871; color:black;"> #548871</button>
+                            <button style="background: #6C9BC9; color:black;"> #6C9BC9</button>
+                            <button style="background: #BFB7B2; color:black;"> #BFB7B2</button>
+                            <button style="background: #000000; color:white;"> #000000</button>
                         </div>
                     </div>
 
@@ -459,10 +453,7 @@
                         <h3 data-i18n="projects.school.zuiderbad.typography-title">Typography:</h3>
                         <p class="font-families">
                             <span style="font-family: 'PaytoneOne-Regular', sans-serif;">PaytoneOne-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'Hind-Medium', sans-serif;">Hind-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'MontserratAlternates-Medium', sans-serif;">MontserratAlternates-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'BaiJamjuree-MediumItalic', sans-serif;">BaiJamjuree-MediumItalic</span>
+                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span>
                         </p>
                     </div>
 
@@ -515,12 +506,11 @@
                     <div>
                        <h3 data-i18n="projects.personal.tunturi.color-palette-title">Color Palette:</h3>
                         <div class="color-palette">
-                            <button style="background: #381dfc; color:white;"> #381dfc</button>
-                            <button style="background: #0bf8e4; color:black;"> #0bf8e4</button>
-                            <button style="background: #00CAB9; color:black;"> #00CAB9</button>
-                            <button style="background: #ffd700; color:black;"> #ffd700</button>
-                            <button style="background: #F8065D; color:white;"> #F8065D</button>
-                            <button style="background: #0c082f; color:white;"> #0c082f</button>
+                            <button style="background: #008000; color:white;"> #008000</button>
+                            <button style="background: #ffffff; color:black;"> #ffffff</button>
+                            <button style="background: #808080; color:black;"> #808080</button>
+                            <button style="background: #f5f5f5; color:black;"> #f5f5f5</button>
+                            <button style="background: #000000; color:white;"> #000000</button>
                         </div>
                     </div>
 
@@ -529,18 +519,17 @@
                         <p class="font-families">
                             <span style="font-family: 'PaytoneOne-Regular', sans-serif;">PaytoneOne-Regular</span> <span style="color: white;"> | </span>
                             <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'Hind-Medium', sans-serif;">Hind-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'MontserratAlternates-Medium', sans-serif;">MontserratAlternates-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'BaiJamjuree-MediumItalic', sans-serif;">BaiJamjuree-MediumItalic</span>
+                            <span style="font-family: 'Hind-Medium', sans-serif;">Hind-Medium</span> <span style="color: white;">
                         </p>
                     </div>
 
                     <div class="carousel">
                         <div class="carousel-images">
-                            <img src="img/zuiderbadLoadPage.png" alt="zuiderbadhome" class="carousel-item">
-                            <img src="img/zuiderbadEhboPin.png" alt="zuiderbadfacilities" class="carousel-item">
+                            <img src="img/tuturi.png" alt="tunturihome" class="carousel-item">
+                            <img src="img/tunturiScroll1.png" alt="tunturiScroll1" class="carousel-item">
+                            <img src="img/tunturiScroll2.png" alt="tunturiScroll2" class="carousel-item">
                             <video width="320" height="240" controls>
-                                <source src="#" type="video/mp4">
+                                <source src="img/tuturivideo.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
