Add: added Audromida as my third personal project

--- a/index.html
+++ b/index.html
@@ -582,33 +582,30 @@
                 </div>
 
                 <!-- PROJECT 3 -->
-                <a href="#" class="project-title">Project 3</a>
+                <a href="#" class="project-title">Audromida</a>
                 <div class="project-info hidden">
                     <h2>Project 3</h2>
-                    <p><strong>Design:</strong> Figma, Illustrator</p>
-                    <p><strong>Development:</strong> none</p>
-                    <p><strong>Description:</strong> Project 3 is a fictional project that focuses on creating customizable stickers for digital communication.</p>
+                    <p><strong>Design:</strong> Figma</p>
+                    <p><strong>Development:</strong> HTML, CSS, JavaScript, JSON</p>
+                    <p><strong>Description:</strong> Audromida is my very own portfolio website that you're currently viewing! Originally built for a school project, it has evolved into a showcase of my work and skills.</p>
 
                     <div>
                         <h3 data-i18n="projects.personal.project3.color-palette-title">Color Palette:</h3>
                         <div class="color-palette">
-                            <button style="background: #381dfc; color:white;"> #381dfc</button>
-                            <button style="background: #0bf8e4; color:black;"> #0bf8e4</button>
-                            <button style="background: #00CAB9; color:black;"> #00CAB9</button>
-                            <button style="background: #ffd700; color:black;"> #ffd700</button>
-                            <button style="background: #F8065D; color:white;"> #F8065D</button>
-                            <button style="background: #0c082f; color:white;"> #0c082f</button>
+                            <button style="background: #FF398F; color:white;"> #FF398F</button>
+                            <button style="background: #420D4A; color:white;"> #420D4A</button>
+                            <button style="background: #9d849d; color:black;"> #9d849d</button>
+                            <button style="background: #210535; color:white;"> #210535</button>
+                            <button style="background: #3A0A35; color:white;"> #3A0A35</button>
+                            <button style="background: #ffffff; color:black;"> #ffffff</button>
                         </div>
                     </div>
 
                     <div>
                         <h3 data-i18n="projects.personal.project3.typography-title">Typography:</h3>
                         <p class="font-families">
-                            <span style="font-family: 'PaytoneOne-Regular', sans-serif;">PaytoneOne-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'HappyMonkey-Regular', sans-serif;">HappyMonkey-Regular</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'Hind-Medium', sans-serif;">Hind-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'MontserratAlternates-Medium', sans-serif;">MontserratAlternates-Medium</span> <span style="color: white;"> | </span>
-                            <span style="font-family: 'BaiJamjuree-MediumItalic', sans-serif;">BaiJamjuree-MediumItalic</span>
+                            <span style="font-family: 'Sora', sans-serif;">Sora</span> <span style="color: white;"> | </span>
+                            <span style="font-family: 'Manrope', sans-serif;">Manrope</span> <span style="color: white;">
                         </p>
                     </div>
 
