Feat: changed the titletag of the blogposts

--- a/blog-posts/blog-post3.html
+++ b/blog-posts/blog-post3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi there! Welcome on my blog</title>
+    <title>Blog: Creative struggles</title>
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/blog.css">
 </head>
@@ -45,14 +45,14 @@
             </p>
 
             <blockquote>
-                "A quote from the blogpost"
+                "You never know where your next idea will come from!" 
             </blockquote>
 
             <p>
-                A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Creative block sucks, but it's a normal part of the creative process. By taking breaks, seeking inspiration in new places, and practicing various brainstorming techniques, you can overcome those blocks and get back to creating amazing designs. So the next time you find yourself stuck, remember these tips and keep pushing forward!
             </p>
             <p>
-                A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+                Or just take a nap. Naps are great.
             </p>
             <a href="/blog.html" class="backBtn">Back to Blog</a>
         </article>
