Feat: wrote actual preview text to replace the lorem ipsum placeholder text

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                 <h3>Struggles of a webdesigner</h3>
                 <p class="date">22-10-2025</p>
                 <p>
-                    A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    When I tell someone I study Digital Experience Design, the most common response I get is: "Oh, so you work with computers?" and yeah, that's true, but it's way more than that. A big part of my study is learning how to design and code websites and apps which I absolutely love doing. However, one of the biggest struggles I face as a webdesigner is the creative block ...
                 </p>
                 <a href="blog-posts/blog-post3.html">Read more →</a>
             </article>
