Add: replace "project 2" with "Figma projects", the actual project will follow soon

--- a/index.html
+++ b/index.html
@@ -539,14 +539,15 @@
 
 
                 <!-- PROJECT 2 -->
-                <a href="#" class="project-title">Project 2</a>
+                <a href="#" class="project-title">Figma Projects</a>
                 <div class="project-info hidden">
-                    <h2>Project 2</h2>
-                    <p><strong>Design:</strong> Figma, Illustrator</p>
+                    <h2>Figma Projects</h2>
+                    <p><strong>Design:</strong> Figma</p>
                     <p><strong>Development:</strong> none</p>
-                    <p><strong>Description:</strong> Project 2 is a fictional project that focuses on creating customizable stickers for digital communication.</p>
+                    <p><strong>Description:</strong> These are Figma projects I made between 2022 and now showcasing various design concepts and prototypes.</p>
 
                     <div>
+                        <!--Color palette changes based on what figma project you click on-->
                         <h3 data-i18n="projects.personal.project2.color-palette-title">Color Palette:</h3>
                         <div class="color-palette">
                             <button style="background: #381dfc; color:white;"> #381dfc</button>
