Fix: worked on putting all the images into the test pages

--- a/tests/services-a.html
+++ b/tests/services-a.html
@@ -148,7 +148,7 @@
         </div>
         </div>
         <div class="hero-image">
-            <img src="/img/profilepic.jpg" alt="Profile Picture">
+            <img src="../img/profilepic.jpg" alt="Profile Picture">
         </div>
     </header>
 
@@ -281,17 +281,17 @@
         <section class="services ab-version-a" id="services">
             <h2 data-i18n="services.title">Services</h2>
             <div class="service">
-                <img src="/icons/ux-ui.png" alt="ux/ui icon">
+                <img src="../icons/ux-ui.png" alt="ux/ui icon">
                 <h3 data-i18n="services.uiux.title">UI/UX Design:</h3>
                 <p data-i18n="services.uiux.desc">I create user-friendly designs that are both easy to use and visually appealing.</p>
             </div>
             <div class="service">
-               <img src="/icons/webappdevelopment.png" alt="web/app icon">
+               <img src="../icons/webappdevelopment.png" alt="web/app icon">
                 <h3 data-i18n="services.frontend.title">Frontend Development:</h3>
                 <p data-i18n="services.frontend.desc">I build responsive, fast-loading websites and apps using HTML, CSS, and JavaScript.</p>
             </div>
             <div class="service">
-                <img src="/icons/3Ddesign.png" alt="3D design icon">
+                <img src="../icons/3Ddesign.png" alt="3D design icon">
                 <h3 data-i18n="services.3d.title">3D Design:</h3>
                 <p data-i18n="services.3d.desc">I create 3D models and animations using Blender and bring ideas to life.</p>
             </div>
@@ -629,17 +629,17 @@
             <section class="contact" id="contact">
                 <h2 data-i18n="contact.title">Contact</h2>
                 <div class="contact-info">
-                    <img src="icons/mailandphonenr.png" alt="email and phone number icon">
+                    <img src="../icons/mailandphonenr.png" alt="email and phone number icon">
                     <h3><strong class="info-title" data-i18n="contact.emailLabel">Email: </strong><span data-i18n="contact.email">fake@email.com</span><br>
                     <strong class="info-title" data-i18n="contact.phoneLabel">Phone nr: </strong>
                     <span data-i18n="contact.phone">04 000 000</span></h3>
                 </div>
                 <div class="contact-info">
-                    <img src="icons/linkedin.png" alt="linkedIn icon">
+                    <img src="../icons/linkedin.png" alt="linkedIn icon">
                     <h3><strong class="info-title" data-i18n="contact.linkedinLabel">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386" target="_blank" data-i18n="contact.linkedinText">Audrey Designs</a></h3>
                 </div>
                  <div class="contact-info">
-                    <img src="icons/cv.png" alt="curriculum vitae icon">
+                    <img src="../icons/cv.png" alt="curriculum vitae icon">
                     <h3><strong class="info-title" data-i18n="contact.extraLabel">Extra: </strong><a href="#" data-i18n="contact.cvText">Download my CV</a></h3>
                 </div>
                 <p class="contact-description" data-i18n="contact.description">If you're interested in working together or have any questions, feel free to reach out!</p>
