--- a/tests/services-b.html
+++ b/tests/services-b.html
@@ -148,7 +148,7 @@
         </div>
         </div>
         <div class="hero-image">
-            <img src="/img/profilepic.jpg" alt="Profile Picture">
+            <img src="../img/profilepic.jpg" alt="Profile Picture">
         </div>
     </header>
 
@@ -629,17 +629,17 @@
             <section class="contact" id="contact">
                 <h2 data-i18n="contact.title">Contact</h2>
                 <div class="contact-info">
-                    <img src="icons/mailandphonenr.png" alt="email and phone number icon">
+                    <img src="../icons/mailandphonenr.png" alt="email and phone number icon">
                     <h3><strong class="info-title" data-i18n="contact.emailLabel">Email: </strong><span data-i18n="contact.email">fake@email.com</span><br>
                     <strong class="info-title" data-i18n="contact.phoneLabel">Phone nr: </strong>
                     <span data-i18n="contact.phone">04 000 000</span></h3>
                 </div>
                 <div class="contact-info">
-                    <img src="icons/linkedin.png" alt="linkedIn icon">
+                    <img src="../icons/linkedin.png" alt="linkedIn icon">
                     <h3><strong class="info-title" data-i18n="contact.linkedinLabel">LinkedIn: </strong><a href="https://be.linkedin.com/in/audrey-kudjo-6a6281386" target="_blank" data-i18n="contact.linkedinText">Audrey Designs</a></h3>
                 </div>
                  <div class="contact-info">
-                    <img src="icons/cv.png" alt="curriculum vitae icon">
+                    <img src="../icons/cv.png" alt="curriculum vitae icon">
                     <h3><strong class="info-title" data-i18n="contact.extraLabel">Extra: </strong><a href="#" data-i18n="contact.cvText">Download my CV</a></h3>
                 </div>
                 <p class="contact-description" data-i18n="contact.description">If you're interested in working together or have any questions, feel free to reach out!</p>
