--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             <h2 data-i18n=" hero.subtitle">Frontend Designer / Developer</h2>
             <p data-i18n="hero.description">I can help you design and build unique and user-friendly websites your users will love!</p>
         <div class="hero.btns">
-            <a href="#" class="btn" data-i18n="hero.contact">Get in touch</a>
-            <a href="#" class="btn" data-i18n="hero.projects">Browse projects</a>
+            <a href="#contact" class="btn" data-i18n="hero.contact">Get in touch</a>
+            <a href="#projects" class="btn" data-i18n="hero.projects">Browse projects</a>
         </div>
         </div>
         <div class="hero-image">
@@ -630,9 +630,9 @@
                 <h2 data-i18n="contact.title">Contact</h2>
                 <div class="contact-info">
                     <img src="icons/mailandphonenr.png" alt="email and phone number icon">
-                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email: </strong><span data-i18n="contact.email">fake@email.com</span><br>
+                    <h3><strong class="info-title" data-i18n="contact.emailLabel">Email: </strong><span id="emailLink" data-i18n="contact.email" style="cursor: pointer; text-decoration: underline;">Click here</span><br>
                     <strong class="info-title" data-i18n="contact.phoneLabel">Phone nr: </strong>
-                    <span data-i18n="contact.phone">04 000 000</span></h3>
+                    <span id="phoneLink"data-i18n="contact.phone">04 000 000 0</span></h3>
                 </div>
                 <div class="contact-info">
                     <img src="icons/linkedin.png" alt="linkedIn icon">
@@ -640,10 +640,18 @@
                 </div>
                  <div class="contact-info">
                     <img src="icons/cv.png" alt="curriculum vitae icon">
-                    <h3><strong class="info-title" data-i18n="contact.extraLabel">Extra: </strong><a href="#" data-i18n="contact.cvText">Download my CV</a></h3>
+                    <h3><strong class="info-title" data-i18n="contact.extraLabel">CV: </strong><a href="#" target="_blank" rel="noopener" class="cv-link" data-i18n="contact.cvText">View my CV</a></h3>
                 </div>
                 <p class="contact-description" data-i18n="contact.description">If you're interested in working together or have any questions, feel free to reach out!</p>
             </section>
+
+            <div id="contactPopup" class="popup" style="display: none;">
+                <div class="popup-content">
+                    <button id="closePopup" class="close-btn" aria-label="Sluit popup"></button>
+                    <h2>Hi there! 👋</h2>
+                    <p>I really appreciate your interest in getting in touch!<br>The email section of my website is still under construction.<br><br>In the meantime, you can find my contact details in my CV. <br>Thank you for your patience and understanding. 😊 </p>
+                </div>
+            </div>
     </main>
 
     <footer data-i18n="footer.text">
